feat(post): display posts on the home screen simply

--- a/backend/eswap/src/main/resources/i18n/messages_en.properties
+++ b/backend/eswap/src/main/resources/i18n/messages_en.properties
@@ -1,6 +1,7 @@
 error.user.not_found=User with {0} {1} not found.
 error.post.not_found=Post with ID {0} not found.
 error.media.not_found=Media with {0} {1} not found.
+error.education_institution.not_found=Education institution with {0} {1} not found.
 error.user.exists=User with {0} {1} already exists.
 error.auth.invalid_credentials=Invalid email or password.
 error.user.locked=The account has been locked.
