--- a/backend/eswap/src/main/resources/i18n/messages_vi.properties
+++ b/backend/eswap/src/main/resources/i18n/messages_vi.properties
@@ -1,6 +1,7 @@
 error.user.not_found=Không tìm thấy người dùng với {0} {1}.
 error.post.not_found=Không tìm thấy bài viết với {0} {1}.
 error.media.not_found=Không tìm thấy media {0} {1}.
+error.education_institution.not_found=Không tìm thấy trường học {0} {1}.
 error.user.exists=Tài khoản {0} {1} đã tồn tại.
 error.auth.invalid_credentials=Email hoặc mật khẩu không đúng.
 error.user.locked=Tài khoản đã bị khóa.
