feat(notification): use fcm to send notification to client(new like, new follow, new post of following), handle navigator when clicked on fcm notification, notification widget

--- a/backend/eswap/src/main/resources/i18n/messages_en.properties
+++ b/backend/eswap/src/main/resources/i18n/messages_en.properties
@@ -13,3 +13,5 @@ error.otp.limit_exceeded=You have exceeded the OTP request limit ({0} times per 
 error.auth.token_missing=Missing authentication token.
 error.auth.token_expired=Token has expired, please log in again.
 error.follow.user_followed=Users followed.
+error.post.like_exists=Liked
+error.post.like_not_found= Like not found
