--- a/backend/eswap/src/main/resources/i18n/messages_vi.properties
+++ b/backend/eswap/src/main/resources/i18n/messages_vi.properties
@@ -13,3 +13,5 @@ error.otp.limit_exceeded=Bạn đã gửi quá {0} lần OTP hôm nay, vui lòng
 error.auth.token_missing=Thiếu token xác thực.
 error.auth.token_expired=Token đã hết hạn, vui lòng đăng nhập lại.
 error.follow.user_followed=Users followed.
+error.post.like_exists=Liked
+error.post.like_not_found= Like not found
