--- a/mobile/eswap/assets/translations/en.json
+++ b/mobile/eswap/assets/translations/en.json
@@ -101,5 +101,6 @@
   "apply": "Apply",
   "error_max_price": "Maximum price must be greater than or equal to minimum price",
   "no_result_found": "No result found",
-  "show_more": "More..."
+  "show_more": "More...",
+  "notification" : "Notification"
 }
