--- a/mobile/eswap/assets/translations/vi.json
+++ b/mobile/eswap/assets/translations/vi.json
@@ -101,5 +101,6 @@
   "apply": "Áp dụng",
   "error_max_price" : "Giá tối đa phải lớn hơn hoặc bằng giá tối thiểu",
   "no_result_found": "Không tìm thấy kết quả",
-  "show_more": "Xem thêm..."
+  "show_more": "Xem thêm...",
+  "notification" : "Thông báo"
 }
