feat(add post): pick images and videos and show UI to add posting function

--- a/mobile/eswap/assets/translations/en.json
+++ b/mobile/eswap/assets/translations/en.json
@@ -83,10 +83,10 @@
   "confirm_send_otp": "Are you sure you want to resend the OTP?",
   "following": "Following",
   "search": "Search",
-  "scope" : "Scope",
+  "scope": "Scope",
   "nationwide": "Nationwide",
-  "filter":"Filter",
-  "sort_related":"Related",
+  "filter": "Filter",
+  "sort_related": "Related",
   "sort_latest": "Latest",
   "filter_shop": "Shop",
   "sort_price": "Price",
@@ -102,5 +102,15 @@
   "error_max_price": "Maximum price must be greater than or equal to minimum price",
   "no_result_found": "No result found",
   "show_more": "More...",
-  "notification" : "Notification"
+  "notification": "Notification",
+  "add_post": "Add post",
+  "privacy_public": "Public",
+  "privacy_follower": "Followers",
+  "item_name": "Item name",
+  "item_desc": "Description",
+  "item_brand": "Brand",
+  "item_original_price" : "Original price",
+  "item_sale_price": "Sale price",
+  "item_address": "Address",
+  "item_phone_number": "Phone number"
 }
