complete the function of adding post, updating alerts in facebook style with dart mode, light mode, system mode

--- a/mobile/eswap/assets/translations/en.json
+++ b/mobile/eswap/assets/translations/en.json
@@ -112,5 +112,6 @@
   "item_original_price" : "Original price",
   "item_sale_price": "Sale price",
   "item_address": "Address",
-  "item_phone_number": "Phone number"
+  "item_phone_number": "Phone number",
+  "item_quantity"  : "Quantity"
 }
