--- a/mobile/eswap/assets/translations/vi.json
+++ b/mobile/eswap/assets/translations/vi.json
@@ -112,5 +112,6 @@
   "item_original_price" : "Giá gốc (đ)",
   "item_sale_price": "Giá bán (đ)",
   "item_address": "Địa chỉ liên hệ",
-  "item_phone_number": "Số điện thoại liên hệ"
+  "item_phone_number": "Số điện thoại liên hệ",
+  "item_quantity"  : "Số lượng"
 }
