feat(chat): send real-time messages (text, link, images, video)

--- a/backend/eswap/src/main/resources/i18n/messages_vi.properties
+++ b/backend/eswap/src/main/resources/i18n/messages_vi.properties
@@ -15,3 +15,4 @@ error.auth.token_expired=Token đã hết hạn, vui lòng đăng nhập lại.
 error.follow.user_followed=Users followed.
 error.post.like_exists=Liked
 error.post.like_not_found= Like not found
+error.chat.not_found=Chat not found
