--- a/backend/eswap/src/main/resources/i18n/messages_en.properties
+++ b/backend/eswap/src/main/resources/i18n/messages_en.properties
@@ -15,3 +15,4 @@ error.auth.token_expired=Token has expired, please log in again.
 error.follow.user_followed=Users followed.
 error.post.like_exists=Liked
 error.post.like_not_found= Like not found
+error.chat.not_found=Chat not found
