feat(order): complete get orders, ui

--- a/backend/eswap/src/main/resources/i18n/messages_en.properties
+++ b/backend/eswap/src/main/resources/i18n/messages_en.properties
@@ -16,3 +16,5 @@ error.follow.user_followed=Users followed.
 error.post.like_exists=Liked
 error.post.like_not_found= Like not found
 error.chat.not_found=Chat not found
+error.order.not_found=Order with {0} {1} not found
+error.order.exists=Please process previous orders before creating new orders.
