--- a/backend/eswap/src/main/resources/i18n/messages_vi.properties
+++ b/backend/eswap/src/main/resources/i18n/messages_vi.properties
@@ -1,18 +1,20 @@
 error.user.not_found=Không tìm thấy người dùng với {0} {1}.
-error.post.not_found=Không tìm thấy bài viết với {0} {1}.
-error.media.not_found=Không tìm thấy media {0} {1}.
-error.education_institution.not_found=Không tìm thấy trường học {0} {1}.
+error.post.not_found=Không tìm thấy bài viết với ID {0}.
+error.media.not_found=Không tìm thấy media với {0} {1}.
+error.education_institution.not_found=Không tìm thấy trường học với {0} {1}.
 error.user.exists=Tài khoản {0} {1} đã tồn tại.
 error.auth.invalid_credentials=Email hoặc mật khẩu không đúng.
 error.user.locked=Tài khoản đã bị khóa.
 error.auth.invalid_code=Mã xác thực sai hoặc đã hết hạn.
-error.auth.forbidden=Bạn không có quyền thực hiện thao tác này ( {0} ).
+error.auth.forbidden=Bạn không có quyền thực hiện thao tác này.
 error.auth.validation_failed=Dữ liệu nhập không hợp lệ. Vui lòng kiểm tra ({0}).
-error.province.not_found=Không tìm thấy tỉnh thành
+error.province.not_found=Không tìm thấy tỉnh thành.
 error.otp.limit_exceeded=Bạn đã gửi quá {0} lần OTP hôm nay, vui lòng thử lại vào ngày mai.
 error.auth.token_missing=Thiếu token xác thực.
 error.auth.token_expired=Token đã hết hạn, vui lòng đăng nhập lại.
-error.follow.user_followed=Users followed.
-error.post.like_exists=Liked
-error.post.like_not_found= Like not found
-error.chat.not_found=Chat not found
+error.follow.user_followed=Đã theo dõi người dùng.
+error.post.like_exists=Đã thích
+error.post.like_not_found=Chưa thích
+error.chat.not_found=Không tìm thấy đoạn chat
+error.order.not_found=Không tìm thấy đơn hàng với {0} {1}
+error.order.exists=Vui lòng xử lý các đơn hàng trước đó trước khi tạo đơn mới.
