--- a/mobile/eswap/assets/translations/vi.json
+++ b/mobile/eswap/assets/translations/vi.json
@@ -85,8 +85,8 @@
   "search": "Tìm kiếm",
   "scope": "Phạm vi",
   "nationwide": "Toàn quốc",
-  "filter":"Lọc",
-  "sort_related":"Liên quan",
+  "filter": "Lọc",
+  "sort_related": "Liên quan",
   "sort_latest": "Mới nhất",
   "filter_store": "Store",
   "sort_price": "Giá",
@@ -99,21 +99,29 @@
   "price_range": "Khoảng giá",
   "clear": "Thiết lập lại",
   "apply": "Áp dụng",
-  "error_max_price" : "Giá tối đa phải lớn hơn hoặc bằng giá tối thiểu",
+  "error_max_price": "Giá tối đa phải lớn hơn hoặc bằng giá tối thiểu",
   "no_result_found": "Không tìm thấy kết quả",
   "show_more": "Xem thêm...",
-  "notification" : "Thông báo",
-  "add_post" : "Tạo bài viết",
+  "notification": "Thông báo",
+  "add_post": "Tạo bài viết",
   "privacy_public": "Công khai",
-  "privacy_follower" : "Chỉ người theo dõi",
+  "privacy_follower": "Chỉ người theo dõi",
   "item_name": "Tên sản phẩm",
   "item_desc": "Mô tả",
-  "item_brand" : "Thương hiệu",
-  "item_original_price" : "Giá gốc (đ)",
+  "item_brand": "Thương hiệu",
+  "item_original_price": "Giá gốc (đ)",
   "item_sale_price": "Giá bán (đ)",
   "item_address": "Địa chỉ liên hệ",
   "item_phone_number": "Số điện thoại liên hệ",
-  "item_quantity"  : "Số lượng",
+  "item_quantity": "Số lượng",
   "no_messages_yet": "Chưa có tin nhắn nào",
-  "free": "Miễn phí"
+  "free": "Miễn phí",
+  "posts": "Số bài đăng",
+  "followers": "Người theo dõi",
+  "edit_profile": "Chỉnh sửa",
+  "share": "Chia sẻ",
+  "location": "Khu vực",
+  "joined": "Đã tham gia",
+  "available": "Đang hiển thị",
+  "sold": "Đã bán"
 }
