--- a/backend/eswap/src/main/resources/i18n/messages_en.properties
+++ b/backend/eswap/src/main/resources/i18n/messages_en.properties
@@ -21,3 +21,4 @@ error.order.not_found=Order with {0} {1} not found
 error.order.exists=Please process previous orders before creating new orders.
 error.order.limit_exceeded=The order has requested multiple deposit payments, please cancel the order
 error.balance.request_limit_exceeded=Withdrawal request limit exceeded
+error.balance.min=Request amount over 50.000đ
