--- a/backend/eswap/src/main/resources/i18n/messages_vi.properties
+++ b/backend/eswap/src/main/resources/i18n/messages_vi.properties
@@ -21,3 +21,4 @@ error.order.not_found=Không tìm thấy đơn hàng với {0} {1}
 error.order.exists=Vui lòng xử lý các đơn hàng trước đó trước khi tạo đơn mới.
 error.order.limit_exceeded=Đơn hàng đã yêu cầu thanh toán đặt cọc nhiều lần, vui lòng hủy đơn hàng
 error.balance.request_limit_exceeded=Vượt quá giới hạn yêu cầu rút tiền. Vui lòng chờ hệ thống xử lý yêu cầu trước đó!
+error.balance.min=Yêu cầu số tiền trên 50.000đ
